# DeVitalik

./: .gitignore  Dockerfile  README.md  db.sqlite  main.py  pyproject.toml
agents/: devitalik.json  example.json  general.json
examples/: social_enhanced_agent.py
social_enhancement/: __init__.py  social_manager.py
social_enhancement/analyzers/: __init__.py  content_analyzer.py
social_enhancement/config/: content_generation.json  crypto_social_pulse.json  track_influencer.json
social_enhancement/connections/: __init__.py  twitter_api.py
social_enhancement/processors/: __init__.py  task_processor.py
src/: action_handler.py  agent.py  api.py  cli.py  connection_manager.py  prompts.py
src/actions/: discord_actions.py  twitter_actions.py
src/connections/: discord_connection.py  github_connection.py  openai_connection.py  twitter_connection.py  twitterapi_connection.py
src/constants/discord/: prompts.py
src/helpers/sqlite/: _init_.py
web/: README.md
web/css/: devitalik-stream.css
web/examples/: basic.html
web/js/: devitalik-stream.js
